📦 Add crates.io metadata and use published dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 edition = "2021"
 license = "BSL-1.0"
 description = "SQL migrations built on lib-migrations-core"
+authors = ["ADI Team"]
+keywords = ["migrations", "database", "sql", "sqlite"]
+categories = ["database"]
+repository = "https://github.com/adi-family/lib-migrations-sql"
+homepage = "https://adi.the-ihor.com"
+documentation = "https://docs.rs/lib-migrations-sql"
 
 [workspace]
 
@@ -12,7 +18,7 @@ default = ["sqlite"]
 sqlite = ["rusqlite"]
 
 [dependencies]
-lib-migrations-core = { git = "https://github.com/adi-family/lib-migrations-core.git" }
+lib-migrations-core = "0.1"
 rusqlite = { version = "0.31", optional = true }
 thiserror = "2"
 
